fixed spacing

--- a/css/qube2space.css
+++ b/css/qube2space.css
@@ -220,6 +220,7 @@ main {
     width: 100%;
     margin: auto;
     margin-top: 2vh;
+    margin-top: 75px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
